gdk/broadway/gdkdnd-broadway.c
@@ -98,6 +98,7 @@ _gdk_broadway_window_drag_begin (GdkWindow *window,
 
   new_context = g_object_new (GDK_TYPE_BROADWAY_DRAG_CONTEXT,
 			      NULL);
+  new_context->display = gdk_window_get_display (window);
 
   return new_context;
 }
